# solana-basic-swap

./: Anchor.toml  asset-manifest.json  index.html  package.json
app/: package.json
app/src/: App.tsx  MyWallet.tsx
app/src/idl/: basic_swap.json
programs/basic-swap/: Cargo.toml
programs/basic-swap/src/: lib.rs
static/js/: 2.98b09b19.chunk.js  2.98b09b19.chunk.js.LICENSE.txt  3.7ab44b60.chunk.js  3.7ab44b60.chunk.js.map  main.839cbb39.chunk.js  main.839cbb39.chunk.js.map  runtime-main.a6f01d3e.js  runtime-main.a6f01d3e.js.map
tests/: basic-swap.ts
